# milvus

./: Makefile  go.mod  go.sum
client/milvusclient/: mock_milvus_server_test.go
configs/: milvus.yaml
docs/design-docs/design_docs/: 20260624-function-chain-api.md  20260722-pyudf-function-chain.md
internal/coordinator/: mix_coord.go
internal/core/: CMakeLists.txt
internal/core/cmake/: DefineOptions.cmake
internal/core/src/: CMakeLists.txt
internal/core/src/pyudf/python/: pyproject.toml
internal/core/src/pyudf/python/milvus_pyudf_runtime/: __init__.py  arrow_io.py  context.py  executor.py  loader.py  wrapper.py
internal/core/src/pyudf/python/tests/: test_milvus_pyudf_runtime.py
internal/datacoord/: mock_test.go
internal/mocks/: mock_mixcoord.go  mock_mixcoord_client.go  mock_proxy.go  mock_rootcoord.go  mock_rootcoord_client.go
internal/models/: embedding_util.go  openai_embedding.go  openai_embedding_test.go
internal/proxy/: function_task.go  function_task_test.go  impl.go  rerank_meta.go  rerank_meta_test.go  rootcoord_mock_test.go  search_pipeline.go  search_pipeline_test.go  search_util.go  task.go  task_delete.go  task_insert.go  task_insert_test.go  task_query.go  task_search.go  task_search_test.go  task_upsert.go  task_upsert_test.go  util.go
internal/rootcoord/: function_task.go  function_task_test.go  root_coord.go
pkg/: go.mod  go.sum
pkg/metrics/: metrics.go  proxy_metrics.go  rootcoord_metrics.go
pkg/proto/: cgo_msg.proto  root_coord.proto
scripts/: core_build.sh
tests/go_client/: go.mod  go.sum
(+192 files in other folders)
