[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milvus-pyudf-runtime"
version = "0.1.0"
description = "Trusted embedded Python runtime wrapper for Milvus PyUDF"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools]
packages = ["milvus_pyudf_runtime"]
